Add new question field, filter by status" git push git status "

--- a/index.html
+++ b/index.html
@@ -21,6 +21,25 @@
                     rush, no judgement</p>
             </div>
             <br>
+
+            <button class="button is-info" onclick="showAll()">Show all</button>
+            <button class="button is-success " onclick="showGotItOnly()">Got it</button>
+            <button class="button is-danger " onclick="showNotYetOnly()">Not yet</button>
+            <br>
+            <button class="button is-warning mt-4 mb-4" onclick="addNewQuestion()">Add new question</button>
+            <textarea class="textarea is-warning" placeholder="Write new question here" id="newQuestion"></textarea>
+            <div class="control">
+                <p class="subtitle is-6 mt-4">Do you know the answer?</p>
+                <label class="radio">
+                    <input type="radio" name="answer" id="yes">
+                    Yes
+                </label>
+                <label class="radio">
+                    <input type="radio" name="answer" id="no">
+                    No
+                </label>
+            </div>
+            <br>
             <br>
             <br>
 
