changes according to a review

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 <body>
     <br>
     <div class="titles" class="is-flex is-justify-content-center is-align-items-center">
-        <p class="title is-2 " style="color: rgb(33, 33, 125); text-align: center;">Javascript Questionnaire</p>
-        <p class="subtitle is-5" style="color: rgb(68, 68, 127); text-align: center;">Evaluate your knowledge of
+        <p class="title is-2  has-text-info-dark has-text-centered">Javascript Questionnaire</p>
+        <p class="subtitle is-5 has-text-info has-text-centered	">
+            Evaluate your
+            knowledge of
             Javascript. No
             rush, no judgement</p>
     </div>
