--- a/index.html
+++ b/index.html
@@ -19,22 +19,12 @@
     </div>
     <div class="columns">
 
+        <div class="column p-6 is-two-thirds" id="card-content"></div>
+
         <div class="column p-6">
 
-            <br>
-            <div id="card-content">
-
-            </div>
-            <footer id='status'>
-
-            </footer>
-        </div>
-        <div class="column p-6">
-
-
-
-            <br>
-            <textarea class="textarea is-warning " placeholder="Write new question here" id="newQuestion"></textarea>
+            <textarea class="textarea is-warning mt-5" placeholder="Write new question here"
+                id="newQuestion"></textarea>
             <button class="button is-warning mt-4 mb-4" onclick="addNewQuestion()">Add new question</button>
 
             <div class="control">
@@ -52,16 +42,11 @@
 
             <label class="checkbox mt-6">
                 <input type="checkbox" id="filter" onclick="showNotYetOnly()">
-                Hide questions that I've learned </label>
+                Hide questions that I've learned 
+            </label>
 
         </div>
     </div>
-
-
-
-
-
-
 
     <script src="./script.js"></script>
 </body>
